# add_subdirectory(ztss_actuator_failure)
add_subdirectory(ztss_attitude_failure)
# add_subdirectory(ztss_case_dummy)
# add_subdirectory(ztss_case_nan_control_values)
add_subdirectory(ztss_ekf_divergence)
add_subdirectory(ztss_gps_failure)
add_subdirectory(ztss_imu_failure)
# add_subdirectory(ztss_invalid_inputs_controller)
add_subdirectory(ztss_magnetometer_failure)
add_subdirectory(ztss_motor_esc_failure)
add_subdirectory(ztss_motor_saturation)
add_subdirectory(ztss_pose_estimate_lost)
# add_subdirectory(ztss_sensors_failure)
# add_subdirectory(ztss_velocity_estimate_lost)
add_subdirectory(ztss_vibration)
